fix: Correções de ícones e alguns bugs

--- a/frontEnd/pages/register/index.html
+++ b/frontEnd/pages/register/index.html
@@ -28,7 +28,7 @@
                 </span>
                 <input type="password" id="password" name="password" placeholder="Digite sua senha" required>
                 <span class="password-toggle-icon" id="togglePassword">
-                    <iconify-icon icon="mdi:eye"></iconify-icon> 
+                    <iconify-icon icon="mdi:eye-off"></iconify-icon> 
                 </span>
             </div>
 
@@ -38,7 +38,7 @@
                 </span>
                 <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirme sua senha" required>
                 <span class="password-toggle-icon" id="toggleconfirmPassword">
-                    <iconify-icon icon="mdi:eye"></iconify-icon> 
+                    <iconify-icon icon="mdi:eye-off"></iconify-icon> 
                 </span>
             </div>
 
