--- a/frontEnd/pages/login/index.html
+++ b/frontEnd/pages/login/index.html
@@ -27,7 +27,7 @@
                 </span>
                 <input type="password" id="password" name="password" placeholder="Senha" required>
                 <span class="password-toggle-icon" id="togglePassword">
-                    <iconify-icon icon="mdi:eye"></iconify-icon> 
+                    <iconify-icon icon="mdi:eye-off"></iconify-icon> 
                 </span>
             </div>
 
