Fix: Correçao de botao de fechar modal do QR CODE

--- a/frontEnd/pages/dashboard/index.html
+++ b/frontEnd/pages/dashboard/index.html
@@ -40,7 +40,7 @@
             <h3 class="modal-titulo">Escanear QR Code</h3>
             <div id="leitor-qr-code"></div>
             <p class="modal-texto-ajuda">Aponte a câmera para o QR Code do dispositivo.</p>
-            <button class="botao-fechar-modal" id="fecharModalBtn">Cancelar</button>
+            <button class="botao-fechar-modal" id="fecharModalQrBtn">Cancelar</button>
         </div>
     </div>
 
