Feature: comunicação webSocket

--- a/frontEnd/pages/dashboard/index.html
+++ b/frontEnd/pages/dashboard/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="./css/style.css">
     <!-- biblioteca para leitura de QR Code -->
     <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/sockjs-client/dist/sockjs.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@stomp/stompjs/dist/stomp.min.js"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js"></script>  
     <!-- biblioteca de ícones Iconify -->
     <script src="https://code.iconify.design/iconify-icon/2.1.0/iconify-icon.min.js"></script>
 </head>
